# bazel-demo

./: .gitignore
bazel-monorepo/: WORKSPACE.bazel  bazel-bazel-monorepo  bazel-bin  bazel-out  bazel-testlogs
bazel-monorepo/projects/calculator/: BUILD.bazel  calculator_test.py
bazel-monorepo/projects/projectA/: BUILD.bazel
bazel-monorepo/projects/projectB/: BUILD.bazel
cpp-tutorial/stage1/: bazel-bin  bazel-out  bazel-stage1  bazel-testlogs
cpp-tutorial/stage2/: bazel-bin  bazel-out  bazel-stage2  bazel-testlogs
